--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,41 @@
-import { FeeCase } from '#src/models/entities/FeeCase.js'
 import Result from '#features/shared/result.js'
-import {
-  connectToFeeMgmtDb,
-  executeStoreProcedure
-} from '#core/data/mssql/index.js'
 
-export default class FeeGetByCifUseCase {
-  async execute({ customerAccount }) {
-    global.logger.info('FeeGetByCifUseCase()')
+export default class FeeCaseGetByCifUseCase {
+  async execute({ cif }, feeManagementModel, customerModel) {
+    global.logger.info(`customerModel.getCustomerDetailsByCif(${cif})`)
+    const [errCustomer, responseCustomer] =
+      await customerModel.getCustomerDetailsByCif(cif)
 
-    const cifno = customerAccount[0].cifno
+    if (errCustomer) {
+      return Result.fail({ message: "It's not possible to get address cif" })
+    }
+    global.logger.info('feeManagementModel.getFeeByAccount')
+    const [errFee, responseFee] = await feeManagementModel.getFeeByAccount(
+      responseCustomer.data.customer
+    )
 
-    const feesData = await this.#getFeesFromSQL(cifno)
-
-    if (!feesData.length) {
-      return Result.fail({ message: "No data found for this CIF" })
+    if (errFee) {
+      return Result.fail({ message: "Its's not possible get fee values" })
     }
 
-    const feePackageId = feesData[0]['Default Fee Package Id'] || null
-
-    const exceptionData = feePackageId
-      ? await this.#getExceptionFeesFromSQL(feePackageId)
-      : []
+    const currentFees =
+      responseCustomer?.data?.customer?.customerCurrentFees?.map((x) => ({
+        feeDescription: x.feeDescription,
+        feeCode: x.feeCode
+      }))
 
     const result = {
-      cif: cifno,
-      customerName: feesData[0].CustomerName || '', // 🟢 Incluindo Customer Name
-      customerAddress: feesData[0].CustomerAddress || '', // 🟢 Incluindo Customer Address
-      customerAccountOfficer: feesData[0].Officer || '',
-      officerId: feesData[0].OfficerId || '',
-      branchCity: feesData[0]['Branch City'] || '',
-      branchState: feesData[0]['Branch State'] || '',
-      feePackage: feesData[0]['Default Fee Package'] || '',
-      defaultFeePackageId: feesData[0]['Default Fee Package Id'] || '',
-      fees: this.#mapFeesByCategory(feesData, exceptionData),
-      feesActives: await this.#getActiveFees(cifno),
-      documentUrl: this.#getDocumentUrl(feePackageId),
-      currentFees: this.#mapCurrentFees(feesData)
+      customerName: responseCustomer.data.customer.customerAddress.name,
+      customerAddress: responseCustomer.data.customer.customerAddress.address,
+      customerAccountOfficer:
+        responseCustomer.data.customer.customerAddress.officer,
+      cif: responseCustomer.data.customer.customerAddress.cif,
+      fees: responseFee.data.fees,
+      feesActives: responseFee.data.feesActives,
+      documentUrl: responseFee.data.documentUrl,
+      currentFees
     }
-
+    global.logger.info('End process')
     return Result.ok(result)
-  }
-
-  async #getFeesFromSQL(cifno) {
-    global.logger.info('getFeesFromSQL()')
-    const connection = await connectToFeeMgmtDb()
-    const recordset = await executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno })
-    return recordset
-  }
-
-  async #getExceptionFeesFromSQL(feePackageId) {
-    global.logger.info('getExceptionFeesFromSQL()')
-    const connection = await connectToFeeMgmtDb()
-    const recordset = await executeStoreProcedure(connection, 'sp_get_exception_fees_bypackage', { feePackageId })
-    return recordset
-  }
-
-  async #getActiveFees(cifno) {
-    const feesActives = await FeeCase.find({
-      cif: cifno,
-      status: { $nin: ['DONE', 'REJECTED'] },
-      caseNumber: { $exists: true }
-    })
-
-    return feesActives.map((x) => ({
-      caseNumber: x.caseNumber,
-      id: x.id
-    }))
-  }
-
-  #mapFeesByCategory(feesData, exceptionData) {
-    const mappedFees = []
-
-    feesData.forEach(record => {
-      const isException = record.StandardException === 'Exception'
-      const isCurrentClient = record.FeeAmount > 0
-
-      const field = {
-        code: record.FeeCode,
-        name: record.FeeDescription,
-        defaultValue: record['Default Fee Amount'] || '',
-        isStandard: !isException,
-        isException: isException,
-        isCurrentClient: isCurrentClient,
-        labelValue: record.FeeAmount ? `$${record.FeeAmount}.00` : '',
-        frequency: record.Frequency || '',
-        defaultFrequency: record['Default Frequency'] || '',
-        amount: record.FeeAmount || record['Default Fee Amount'] || 0,
-        exceptionOptions: isException ? this.#parseExceptionOptions(exceptionData, record) : []
-      }
-
-      let feeGroup = mappedFees.find(f => f.feeType === record.FeeType)
-      if (!feeGroup) {
-        feeGroup = { feeType: record.FeeType, feeGroups: [] }
-        mappedFees.push(feeGroup)
-      }
-
-      let targetGroup
-      if (isException) {
-        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Exception Request')
-        if (!targetGroup) {
-          targetGroup = { name: 'Exception Request', fields: [] }
-          feeGroup.feeGroups.push(targetGroup)
-        }
-      } else if (isCurrentClient) {
-        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Client Current Fees')
-        if (!targetGroup) {
-          targetGroup = { name: 'Client Current Fees', fields: [] }
-          feeGroup.feeGroups.push(targetGroup)
-        }
-      } else {
-        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Standard Fees')
-        if (!targetGroup) {
-          targetGroup = { name: 'Standard Fees', fields: [] }
-          feeGroup.feeGroups.push(targetGroup)
-        }
-      }
-
-      targetGroup.fields.push(field)
-    })
-
-    return mappedFees
-  }
-
-  #parseExceptionOptions(exceptionData, record) {
-    return exceptionData
-      .filter(exc => exc.FeeCode === record.FeeCode)
-      .map(exc => ({
-        value: exc.Amount,
-        text: `$${exc.Amount}.00`,
-        visible: true,
-        retired: false
-      }))
-  }
-
-  #getDocumentUrl(feePackageId) {
-    const scheduleUrls = global.environment.scheduleUrls
-    const packageMap = {
-      1: 'intlPB3',
-      2: 'uSPBIndividual3',
-      3: 'uSPBCorporation3',
-      4: 'efraPB3',
-      5: 'eraPB3'
-    }
-
-    const scheduleType = packageMap[feePackageId] || ''
-    
-    return scheduleUrls[scheduleType] || ''
-  }
-
-  #mapCurrentFees(feesData) {
-    return feesData
-      .filter(record => record.FeeAmount > 0)
-      .map(record => ({
-        feeDescription: `${record.FeeDescription} - $${record.FeeAmount}.00`,
-        feeCode: `${record.FeeType} ${record.ACCTNO}`
-      }))
   }
 }
