--- a/.gitignore
+++ b/.gitignore
@@ -1,158 +1,53 @@
-{
-    "code": 200,
-    "data": {
-        "customerName": "MMMM MMMMMM",
-        "customerShortName": "MMMMMM MMMM",
-        "customerAddress": "JACK FRANCO 425 EAST 58TH STREET APT # 48 B NEW YORK NY 10022",
-        "customerAccountOfficer": "036 Sigalit Levy-Shabi        BR 4",
-        "cif": "F016583",
-        "officerId": "369",
-        "branchCity": "New York",
-        "branchState": "NY",
-        "feePackage": "Domestic Individual",
-        "defaultFeePackageId": 2,
-        "fees": [
-            {
-                "feeType": "Customer Fees",
-                "feeGroups": [
-                    {
-                        "visible": true,
-                        "kycMailingStatus": "Print",
-                        "name": "Standard Fees",
-                        "code": 1,
-                        "accountNumber": "7115822",
-                        "id": "67a1150e79dd9bb94aadfd38",
-                        "cif": "F016583",
-                        "fields": [
-                            {
-                                "hasChanged": false,
-                                "code": 1,
-                                "isException": false,
-                                "name": "Account Maintenance",
-                                "tooltip": "Charged: Semiannual",
-                                "defaultValue": "600",
-                                "exceptionOptions": [],
-                                "createdAt": "2023-05-20T16:25:31.435Z",
-                                "updatedAt": "2023-05-20T16:25:31.435Z",
-                                "isCurrentClient": false,
-                                "isStandard": true,
-                                "id": "6468f46eff51aa9d77d849d7",
-                                "labelValue": "$600.00"
-                            },
-                            {
-                                "hasChanged": false,
-                                "code": 2,
-                                "isException": false,
-                                "name": "Hold Mail",
-                                "defaultValue": "600",
-                                "tooltip": "Charged: Annually",
-                                "exceptionOptions": [],
-                                "createdAt": "2023-05-20T16:25:31.435Z",
-                                "updatedAt": "2023-05-20T16:25:31.435Z",
-                                "isCurrentClient": false,
-                                "isStandard": true,
-                                "id": "6468f46eff51aa9d77d849d8",
-                                "labelValue": "$600.00"
-                            }
-                        ]
-                    },
-                    {
-                        "visible": true,
-                        "kycMailingStatus": null,
-                        "name": "Client Current Fees",
-                        "code": 1,
-                        "accountNumber": "7115822",
-                        "id": "67a1150e79dd9bb94aadfd3b",
-                        "cif": "F016583",
-                        "fields": [
-                            {
-                                "hasChanged": false,
-                                "code": 1,
-                                "isException": false,
-                                "name": "Account Maintenance",
-                                "defaultValue": "0",
-                                "exceptionOptions": [],
-                                "createdAt": "2023-05-20T16:25:31.436Z",
-                                "updatedAt": "2023-05-20T16:25:31.436Z",
-                                "isCurrentClient": true,
-                                "isStandard": false,
-                                "id": "6468f46eff51aa9d77d849dc",
-                                "labelValue": "$0.00"
-                            },
-                            {
-                                "hasChanged": false,
-                                "code": 2,
-                                "isException": false,
-                                "name": "Hold mail",
-                                "defaultValue": "NOT APPLICABLE",
-                                "exceptionOptions": [],
-                                "createdAt": "2023-05-20T16:25:31.436Z",
-                                "updatedAt": "2023-05-20T16:25:31.436Z",
-                                "isCurrentClient": true,
-                                "isStandard": false,
-                                "id": "6468f46eff51aa9d77d849dd",
-                                "labelValue": "NOT APPLICABLE"
-                            }
-                        ]
-                    },
-                    {
-                        "visible": true,
-                        "kycMailingStatus": null,
-                        "name": "Exception Request",
-                        "code": 1,
-                        "accountNumber": "7115822",
-                        "id": "67a1150e79dd9bb94aadfd3e",
-                        "cif": "F016583",
-                        "fields": [
-                            {
-                                "hasChanged": false,
-                                "code": 1,
-                                "isException": true,
-                                "name": "Account Maintenance",
-                                "defaultValue": "",
-                                "exceptionOptions": [
-                                    {
-                                        "approvedByDoubleA": null,
-                                        "value": "600",
-                                        "text": "$600.00",
-                                        "visible": true,
-                                        "retired": false,
-                                        "_id": "6468f46eff51aa9d77d849e2",
-                                        "parameterOptionId": 11
-                                    },
-                                    {
-                                        "approvedByDoubleA": null,
-                                        "value": "0",
-                                        "text": "$0.00",
-                                        "visible": true,
-                                        "retired": false,
-                                        "_id": "6468f46eff51aa9d77d849e3",
-                                        "parameterOptionId": 12
-                                    }
-                                ],
-                                "createdAt": "2023-05-20T16:25:31.436Z",
-                                "updatedAt": "2023-05-20T16:25:31.436Z",
-                                "isCurrentClient": false,
-                                "isStandard": false,
-                                "id": "6468f46eff51aa9d77d849e1",
-                                "labelValue": "$0.00"
-                            }
-                        ]
-                    }
-                ]
-            }
-        ],
-        "feesActives": [],
-        "documentUrl": "https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCSW5kaXZpZHVhbDMucGRm&version_id=null",
-        "currentFees": [
-            {
-                "feeDescription": "Hold Mail Fee (per annum) -  $0.00",
-                "feeCode": " Personal Checking -D 7113617"
-            },
-            {
-                "feeDescription": "USD/FX Outgoing Wire Fee $75.00",
-                "feeCode": " Personal Checking -D 7113617"
-            }
-        ]
+import Result from '#features/shared/result.js'
+
+export default class FeeCaseGetByCifUseCase {
+  async execute({ cif }, feeManagementModel, customerModel) {
+    // global.logger.info(`customerModel.getCustomerDetailsByCif(${cif})`)
+
+    const [errCustomer, responseCustomer] = await customerModel.getCustomerDetailsByCif(cif)
+
+    if (errCustomer) {
+      return Result.fail({ message: "It's not possible to get address cif" })
     }
+
+    const customerData = responseCustomer?.data?.customer || {}
+
+    // global.logger.info('feeManagementModel.getFeeByAccount')
+    const [errFee, responseFee] = await feeManagementModel.getFeeByAccount(customerData)
+
+    if (errFee) {
+      return Result.fail({ message: "It's not possible to get fee values" })
+    }
+
+    const feesData = responseFee?.data || {}
+
+    const currentFees = customerData?.customerCurrentFees?.map((x) => ({
+      feeDescription: x.feeDescription,
+      feeCode: x.feeCode
+    })) || []
+
+    const result = {
+      customerName: feesData?.customerName || '',
+      customerShortName: feesData?.customerShortName || '',
+      customerAddress: customerData?.customerAddress?.address || '',
+      customerAccountOfficer: customerData?.customerAddress?.officer || '',
+      cif: customerData?.customerAddress?.cif || cif, 
+      officerId: feesData?.officerId || '',
+      branchCity: feesData?.branchCity || '',
+      branchState: feesData?.branchState || '',
+      feePackage: feesData?.feePackage || '',
+      defaultFeePackageId: feesData?.defaultFeePackageId || '',
+
+      fees: feesData.fees || [],
+      feesActives: feesData.feesActives || [],
+
+      documentUrl: feesData.documentUrl || '',
+
+      currentFees
+    }
+
+    // global.logger.info('End process')
+
+    return Result.ok(result)
+  }
 }
