--- a/.gitignore
+++ b/.gitignore
@@ -1,177 +1,513 @@
-{
-  customerAccount: [
-    {
-      cifno: "F016583",
-      ddaNumber: 7115822,
-      bpsAcctNumber: "",
-      feeType: 1,
-      feeDescription: "AccountMaintenance",
-      feeCode: "JH001",
-      bpsFeeTypeCode: "",
-      source: "JHA",
-      entity: "SNB/284",
-      feeAmount: 25,
-      isFeesStandard: "Yes",
-      kycMailingStatus: null,
-      feeGroup: 1,
-    },
-    {
-      cifno: "F016583",
-      ddaNumber: 7115822,
-      bpsAcctNumber: "",
-      feeType: 2,
-      feeDescription: "HoldMail",
-      feeCode: "JH002",
-      bpsFeeTypeCode: "",
-      source: "JHA",
-      entity: "SNB/284",
-      feeAmount: 0,
-      isFeesStandard: "Yes",
-      kycMailingStatus: "Print",
-      feeGroup: 1,
-    },
-  ],
-  customerAddress: {
-    cif: "F016583",
-    name: "FRANCO JACK",
-    address: "JACK FRANCO 425 EAST 58TH STREET APT # 48 B NEW YORK NY 10022",
-    officer: "036 Sigalit Levy-Shabi        BR 4",
-    accountNumber: "7113617",
-  },
-  customerCurrentFees: [
-    {
-      feeCode: " Personal Checking -D 7113617",
-      feeDescription: "Hold Mail Fee (per annum) -  $0.00",
-    },
-    {
-      feeCode: " Personal Checking -D 7113617",
-      feeDescription: "USD/FX Outgoing Wire Fee $75.00",
-    },
-    {
-      feeCode: " Personal Checking -D 7115342",
-      feeDescription: "USD/FX Outgoing Wire Fee $75.00",
-    },
-    {
-      feeCode: " Personal Promise   D 7115431",
-      feeDescription: "USD/FX Outgoing Wire Fee $75.00",
-    },
-    {
-      feeCode: " Personal Savings 7115822",
-      feeDescription: "Account Maintenance Fee $1,200 (S/A $600) -  $0.00",
-    },
-    {
-      feeCode: " Personal Savings 7115822",
-      feeDescription: "USD/FX Outgoing Wire Fee $75.00",
-    },
-  ],
-}
 
+_id
+6468f46eff51aa9d77d849ee
+feeType
+"Customer Fees"
 
-import Result from '#features/shared/result.js';
+feeGroups
+Array (3)
 
-export default class FeeCaseGetByCifUseCase {
-  async execute({ cif }, feeManagementModel, customerModel) {
-    const [errCustomer, responseCustomer] = await customerModel.getCustomerDetailsByCif(cif);
-    if (errCustomer) {
-      return Result.fail({ message: "It's not possible to get address cif" });
-    }
+0
+Object
+name
+"Standard Fees"
+code
+1
 
-    const customerData = responseCustomer?.data?.customer || {};
-    const [errFee, responseFee] = await feeManagementModel.getFeeByAccount(customerData);
-    if (errFee) {
-      return Result.fail({ message: "It's not possible to get fee values" });
-    }
+fields
+Array (2)
 
-    function formatCamelCaseToTitle(text) {
-      return text.replace(/([a-z])([A-Z])/g, '$1 $2');
-    }
+0
+Object
+code
+1
+isException
+false
+name
+"Account Maintenance"
+tooltip
+"Charged: Semiannual"
+defaultValue
+"600"
 
-    const feesData = responseFee?.data || {};
-    const timestamp = new Date().toISOString();
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d849d7
+createdAt
+2023-05-20T16:25:31.435+00:00
+updatedAt
+2023-05-20T16:25:31.435+00:00
+isCurrentClient
+false
+isStandard
+true
 
-    const currentFees = [
-      ...(customerData?.customerCurrentFees?.map(x => ({
-        feeDescription: x.feeDescription || '',
-        feeCode: x.feeCode || ''
-      })) || []),
-      ...(feesData?.currentFees || [])
-    ];
+1
+Object
+visible
+true
+_id
+6468f46eff51aa9d77d849d9
+createdAt
+2023-05-20T16:25:31.435+00:00
+updatedAt
+2023-05-20T16:25:31.435+00:00
 
-    const formattedFees = customerData?.customerAccount
-      ?.filter(fee => ["Customer Fees", "Bank Account Fees", "Investment Account Fees"].includes(fee.feeType))
-      .map(fee => ({
-        feeGroups: [{
-          name: fee.feeGroup === 1 ? "Client Current Fees" : "Standard Fees",
-          visible: true,
-          kycMailingStatus: customerData.kycMailingStatus || null,
-          code: customerData.feeCode,
-          accountNumber: customerData.ddaNumber || '',
-          cif: fee.cifno,
-          id: '',
-          fields: [{
-            hasChanged: false,
-            code: customerData.feeCode,
-            name: formatCamelCaseToTitle(fee.feeDescription),
-            defaultValue: fee.feeAmount?.toString() || '',
-            isStandard: fee.isFeesStandard === "Yes",
-            isException: fee.isFeesStandard === "No",
-            isCurrentClient: false,
-            labelValue: `$${fee.feeAmount.toFixed(2)}`,
-            tooltip: fee.source ? `Source: ${fee.source}` : '',
-            exceptionOptions: [],
-            createdAt: timestamp,
-            updatedAt: timestamp,
-            id: fee.ddaNumber.toString()
-          }]
-        }],
-        feeType: fee.feeType,
-        id: '',
-      })) || [];
+1
+Object
+name
+"Client Current Fees"
+code
+1
 
-    const formattedFeeGroups = feesData?.fees
-      ?.filter(feeGroup => ["Customer Fees", "Bank Account Fees", "Investment Account Fees"].includes(feeGroup.feeType))
-      .map(feeGroup => ({
-        ...feeGroup,
-        id: '',
-        feeGroups: feeGroup.feeGroups.map(group => ({
-          ...group,
-          id: group.id || '',
-          cif: group.cif || '',
-          accountNumber: group.accountNumber || '',
-          fields: group.fields.map(field => ({
-            ...field,
-            hasChanged: field.hasChanged || false,
-            createdAt: field.createdAt || timestamp,
-            updatedAt: field.updatedAt || timestamp,
-            id: field._id || '',
-            exceptionOptions: field.exceptionOptions?.map(opt => ({
-              ...opt,
-              parameterOptionId: opt.parameterOptionId || '',
-            })) || []
-          }))
-        }))
-      })) || [];
+fields
+Array (2)
 
-    const result = {
-      customerName: customerData?.customerAddress?.name || feesData?.customerName || '',
-      customerShortName: feesData?.customerShortName || '',
-      customerAddress: customerData?.customerAddress?.address || '',
-      customerAccountOfficer: customerData?.customerAddress?.officer || '',
-      cif: customerData?.customerAddress?.cif || cif,
-      officerId: feesData?.officerId || '',
-      branchCity: feesData?.branchCity || '',
-      branchState: feesData?.branchState || '',
-      branchType: feesData?.branchType || '',
-      feePackage: feesData?.feePackage || '',
-      defaultFeePackageId: feesData?.defaultFeePackageId || '',
-      defaultPackageType: feesData?.defaultPackageType || '',
-      fees: [...formattedFees, ...formattedFeeGroups],
-      feesActives: feesData?.feesActives || [],
-      documentUrl: feesData?.documentUrl || '',
-      currentFees
-    };
+0
+Object
 
-    global.logger.info('End process');
-    return Result.ok(result);
-  }
-}
+1
+Object
+visible
+true
+_id
+6468f46eff51aa9d77d849de
+createdAt
+2023-05-20T16:25:31.436+00:00
+updatedAt
+2023-05-20T16:25:31.436+00:00
+
+2
+Object
+name
+"Exception Request"
+code
+1
+
+fields
+Array (2)
+
+0
+Object
+
+1
+Object
+visible
+true
+_id
+6468f46eff51aa9d77d849e7
+createdAt
+2023-05-20T16:25:31.436+00:00
+updatedAt
+2023-05-20T16:25:31.436+00:00
+createdAt
+2023-05-20T16:25:31.444+00:00
+updatedAt
+2023-05-20T16:25:31.444+00:00
+__v
+0
+_id
+6468f46eff51aa9d77d84a1b
+feeType
+"Bank Account Fees"
+
+feeGroups
+Array (3)
+
+0
+Object
+name
+"Standard Fees"
+code
+2
+
+fields
+Array (2)
+
+0
+Object
+code
+3
+isException
+false
+name
+"Incoming Wire"
+defaultValue
+"0"
+tooltip
+"Charged: Per Transaction"
+
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d849fc
+createdAt
+2023-05-20T16:25:31.436+00:00
+updatedAt
+2023-05-20T16:25:31.436+00:00
+isCurrentClient
+false
+isStandard
+true
+
+1
+Object
+visible
+true
+_id
+6468f46eff51aa9d77d849fe
+createdAt
+2023-05-20T16:25:31.436+00:00
+updatedAt
+2023-05-20T16:25:31.436+00:00
+
+1
+Object
+name
+"Client Current Fees"
+code
+2
+
+fields
+Array (2)
+
+0
+Object
+code
+3
+isException
+false
+name
+"Incoming Wire"
+defaultValue
+"10"
+
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d84a01
+createdAt
+2023-05-20T16:25:31.437+00:00
+updatedAt
+2023-05-20T16:25:31.437+00:00
+isCurrentClient
+true
+isStandard
+false
+
+1
+Object
+code
+4
+isException
+false
+name
+"Outgoing Wire"
+defaultValue
+"75"
+
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d84a02
+createdAt
+2023-05-20T16:25:31.437+00:00
+updatedAt
+2023-05-20T16:25:31.437+00:00
+isCurrentClient
+true
+isStandard
+false
+visible
+true
+_id
+6468f46eff51aa9d77d84a03
+createdAt
+2023-05-20T16:25:31.437+00:00
+updatedAt
+2023-05-20T16:25:31.437+00:00
+
+2
+Object
+name
+"Exception Request"
+code
+2
+
+fields
+Array (2)
+
+0
+Object
+code
+3
+isException
+true
+name
+"Incoming Wire"
+defaultValue
+""
+
+exceptionOptions
+Array (2)
+
+0
+Object
+value
+"10"
+text
+"$10.00"
+visible
+true
+retired
+false
+_id
+6468f46eff51aa9d77d84a07
+parameterOptionId
+17
+
+1
+Object
+value
+"0"
+text
+"$0.00"
+visible
+true
+retired
+false
+_id
+6468f46eff51aa9d77d84a08
+parameterOptionId
+18
+_id
+6468f46eff51aa9d77d84a06
+createdAt
+2023-05-20T16:25:31.437+00:00
+updatedAt
+2023-05-20T16:25:31.437+00:00
+isCurrentClient
+false
+isStandard
+false
+
+1
+Object
+visible
+true
+_id
+6468f46eff51aa9d77d84a10
+createdAt
+2023-05-20T16:25:31.437+00:00
+updatedAt
+2023-05-20T16:25:31.437+00:00
+createdAt
+2023-05-20T16:25:31.444+00:00
+updatedAt
+2023-05-20T16:25:31.444+00:00
+__v
+0
+_id
+6468f46eff51aa9d77d84a56
+feeType
+"Investment Account Fees"
+
+feeGroups
+Array (3)
+
+0
+Object
+name
+"Standard Fees"
+code
+3
+
+fields
+Array (3)
+
+0
+Object
+code
+6
+isException
+false
+name
+"Safekeeping-Custody"
+defaultValue
+"A021"
+tooltip
+"Charged: Quarterly"
+
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d84a2d
+createdAt
+2023-05-20T16:25:31.437+00:00
+updatedAt
+2023-05-20T16:25:31.437+00:00
+isCurrentClient
+false
+isStandard
+true
+
+1
+Object
+code
+5
+isException
+false
+name
+"SSL Account Maintenance"
+defaultValue
+"375"
+tooltip
+"Charged: Quarterly"
+
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d84a2e
+createdAt
+2023-05-20T16:25:31.437+00:00
+updatedAt
+2023-05-20T16:25:31.437+00:00
+isCurrentClient
+false
+isStandard
+true
+
+2
+Object
+visible
+true
+_id
+6468f46eff51aa9d77d84a30
+createdAt
+2023-05-20T16:25:31.438+00:00
+updatedAt
+2023-05-20T16:25:31.438+00:00
+
+1
+Object
+name
+"Client Current Fees"
+code
+3
+
+fields
+Array (3)
+
+0
+Object
+code
+6
+isException
+false
+name
+"Safekeeping-Custody"
+defaultValue
+"A021"
+
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d84a34
+createdAt
+2023-05-20T16:25:31.438+00:00
+updatedAt
+2023-05-20T16:25:31.438+00:00
+isCurrentClient
+true
+isStandard
+false
+
+1
+Object
+code
+5
+isException
+false
+name
+"SSL Account Maintenance"
+defaultValue
+"375"
+
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d84a35
+createdAt
+2023-05-20T16:25:31.438+00:00
+updatedAt
+2023-05-20T16:25:31.438+00:00
+isCurrentClient
+true
+isStandard
+false
+
+2
+Object
+code
+7
+isException
+false
+name
+"Equity and Options Commission"
+defaultValue
+"E3"
+
+exceptionOptions
+Array (empty)
+_id
+6468f46eff51aa9d77d84a36
+createdAt
+2023-05-20T16:25:31.438+00:00
+updatedAt
+2023-05-20T16:25:31.438+00:00
+isCurrentClient
+true
+isStandard
+false
+visible
+true
+_id
+6468f46eff51aa9d77d84a37
+createdAt
+2023-05-20T16:25:31.438+00:00
+updatedAt
+2023-05-20T16:25:31.438+00:00
+
+2
+Object
+name
+"Exception Request"
+code
+3
+
+fields
+Array (3)
+
+0
+Object
+
+1
+Object
+
+2
+Object
+visible
+true
+_id
+6468f46eff51aa9d77d84a48
+createdAt
+2023-05-20T16:25:31.438+00:00
+updatedAt
+2024-11-16T12:30:04.294+00:00
+createdAt
+2023-05-20T16:25:31.445+00:00
+updatedAt
+2024-11-16T12:30:04.295+00:00
+__v
+1
